--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         li h2 a {
             display: block;
             background: #000;
-            background: rgba(0, 0, 0, .5);
+            zoom: 1;
+            opacity: .5;
+            filter: alpha(opacity=50)
             padding: 10px;
             font-size: 1.2em;
             font-weight: bold;
